--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -1,6 +1,29 @@
 <div class="">
+	<div style="padding:30px 30px 10px 30px;">
+		<div class="card" style="padding:20px;">
+			<h4>ご予約の流れ</h4>
+			<hr>
+			<div class="row">
+				<div class="col-4">
+					<div class="card" style="padding:10px;margin:5px 10px;">
+						<h5 style="color:rgba(30, 30, 30, .3)">1 : 予約プラン確認</h5>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="card" style="padding:10px;border-width:3px;border-color:#66CCFF;margin:5px 10px;">
+						<h5>2 : ご予約内容の入力</h5>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="card" style="padding:10px;margin:5px 10px;">
+						<h5 style="color:rgba(30, 30, 30, .3)">3 : 予約完了</h5>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div style="padding:30px;">
 	<h1 class="text-center">部屋確認</h1>
-	<hr>
 	<div class="row">
 		<div class="col-12">
 			<div class="card" style="padding:15px;margin-bottom:20px;">
@@ -47,5 +70,6 @@
 			<%= submit_tag "予約する", :class => "btn btn-sm btn-info text-center", :style => "width:200px;" %>
 			<% end %>
 		</div>
+	</div>
 	</div>
 </div>
