--- a/app/views/reservations/create.html.erb
+++ b/app/views/reservations/create.html.erb
@@ -1,4 +1,28 @@
-<div class="">
+<div style="padding:30px 30px 10px 30px;">
+	<div class="card" style="padding:20px;">
+		<h4>ご予約の流れ</h4>
+		<hr>
+		<div class="row">
+			<div class="col-4">
+				<div class="card" style="padding:10px;margin:5px 10px;">
+					<h5 style="color:rgba(30, 30, 30, .3)">1 : 予約プラン確認</h5>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="card" style="padding:10px;margin:5px 10px;">
+					<h5 style="color:rgba(30, 30, 30, .3)">2 : ご予約内容の入力</h5>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="card" style="padding:10px;border-width:3px;border-color:#66CCFF;margin:5px 10px;">
+					<h5>3 : 予約完了</h5>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
+<div class="" style="padding:30px;">
 	<br>
 	<h1 class="text-center">部屋の予約が完了しました！</h1>
 	<% # ハッシュ認証つき、URL つける %>
