--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,22 @@
-<div class="">
-	<h3>記事一覧</h3>
-	<hr>
-	<div class="row">
-	<% @articles.each do |article| %>
-		<div class="col-4">
-			<div class="card" style="padding:10px;margin-bottom:10px;">
-				<h4><%= article.title %></h4>
-				<p><%= strip_tags(article.content)[0..15] %></p>
-				<a href="/articles/<%= article.id %>" class="btn btn-sm btn-info">詳細を見る</a>
+<div class="row">
+	<div class="col-3">
+		<!---->
+		<%= render("/common/right_bar") %>
+	</div>
+	<div class="col-9">
+		<h3>記事一覧</h3>
+		<hr>
+		<div class="row">
+		<% @articles.each do |article| %>
+			<div class="col-4">
+				<div class="card" style="padding:10px;margin-bottom:10px;">
+					<h6><%= article.title %></h6>
+					<img src="<%= article.fixed_image_url %>" style="width:90%;height:70px;margin-bottom:5px;">
+					<p><small><%= strip_tags(article.content)[0..15] %></small></p>
+					<a href="/articles/<%= article.id %>" class="btn btn-sm btn-info">詳細を見る</a>
+				</div>
 			</div>
-		</div>
-	<% end %>
-	<br><br>
+		<% end %>
+		<br><br>
+	</div>
 </div>
