--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -5,28 +5,38 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <div class="navbar-nav mr-auto mt-2 mt-lg-0" style="width:10%">
+    </div>
+    <ul class="navbar-nav mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">ホーム <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">ホーム <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/articles?is_option=0">記事一覧</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/articles?is_option=1">観光地一覧</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/plans">プラン一覧</a>
+      </li>
+      <% if user_signed_in? %>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          一覧ページ
+          管理画面ページ
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/plans">プラン一覧</a>
-          <a class="dropdown-item" href="/articles?is_option=0">オプション一覧</a>
-          <a class="dropdown-item" href="/articles">記事一覧</a>
+          <a class="dropdown-item" href="/remainrooms">予約カレンダー一覧</a>
           <div class="dropdown-divider"></div>
         </div>
       </li>
+      <% end %>
     </ul>
+    <!--
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    -->
   </div>
 </nav>
