--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 </head>
 <body>
 <%= render "common/navbar" %>
-<div class="container" style="margin-top:10px;">
+<div class="" style="margin:10px 1%;">
 <%= yield %>
 </div>
-
+<%= render "common/footer" %>
 </body>
 </html>
