--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,25 +1,10 @@
 <div class="" style="margin-top:24px">
-	<h3>ようこそ！<%= @reservation.last_name %> <%= @reservation.first_name %>さん</h3>
-	<br>
-	<div class="row">
-		<div class="col-sm-6">
-			<div class="card" style="padding:20px;">
-				<h4><%= @plan.title %></h4>
-				<hr>
-				<p>1泊<%= @plan.price %>円　<%= @plan.people_num %>人部屋</p>
-				<p><%= @plan.explanation %></p>
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div class="card" style="padding:20px;">
-				<h4>予約詳細</h4>
-				<hr>
-				<p><%= @reservation.last_name %> <%= @reservation.first_name %>さん (<%= @reservation.email %>)</p>
-				<p><%= @reservation.price %>円　<%= (@reservation.end_date - @reservation.start_date+1).to_i %>泊</p>
-				<p><%= @reservation.start_date %>～<%= @reservation.end_date %>　(<%= @reservation.people_num %>人)</p>
-			</div>
-		</div>
-	</div>
+	<h4>確認のためメールアドレスを入力してください</h4>
+	<%= form_tag("/reservations/check/#{@reservation.id}", method: :post) do %>
+		<%= text_field_tag :email, @email, :class => "form-control", :style => "width:60%;margin:20px 0;", :placeholder => "メールアドレス" %>
+		<%= hidden_field_tag :reservation_hash, @reservation_hash %>
+		<%= submit_tag "確認する", :class => "btn btn-sm btn-info" %>
+	<% end %>
 	<hr>
 	<div class="">
 		<h4>ご来泊になる前の注意事項</h4>
