--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,3 +1,13 @@
+<div style="width::100%">
+	<div style="background-image:url('https://megufuji154.s3.us-east-2.amazonaws.com/photos/common/common3.jpg');background-repeat: no-repeat, repeat;background-size: cover;background-size:100% auto;min-height:250px;width:100%;">
+		<div class="text-center" style="width:40%;margin-left:30%;padding-top:100px;padding-bottom:100px">
+			<h4 style="background-color:rgba(240, 240, 240, .6);height:100px;padding-top:33px;">
+			<strong>1 : 予約プランの確認</strong>
+			</h4>
+		</div>
+	</div>
+</div>
+<br>
 <div class="row">
 	<div class="col-3">
 		<!---->
